# ColorCalibrator

./: CMakeLists.txt  README.md  res.qrc
inc/: ColorCorrect.h  ColorSpace.h  DataManager.h  MacbethColor.h  MacbethColorChecker.h  MainWidget.h  MainWindow.h  OverlayWidget.h  Utils.h  Widget.h
src/: ColorCorrect.cu  DataManager.cpp  MacbethColorChecker.cpp  MainWidget.cpp  MainWindow.cpp  OverlayWidget.cpp  Utils.cpp  Widget.cpp
ui/: MainWindow.ui
